Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL), 10.10(EOL), 10.11, 11.1(EOL), 11.2(EOL), 11.3(EOL)
Description
Ever since MDEV-12227 and MDEV-26782 were implemented, writes of pages of the InnoDB temporary tablespace should be rare. Because the lifetime of temporary tables is expected to be short, it would seem to make sense to assume that all temporary tablespace pages will remain in the buffer pool, and to disable the read-ahead for pages of the temporary tablespace.
Having read-ahead enabled for temporary tablespace pages would cause debug assertion failures in MDEV-28699. It is simplest to disable the read-ahead.
Attachments
Issue Links
- blocks
-
MDEV-28699 Shrink temporary tablespaces without restart
-
- Closed
-